--- a/Server/package.json
+++ b/Server/package.json
@@ -4,11 +4,13 @@
   "description": "Template server for react native app",
   "main": "index.js",
   "scripts": {
+    "server": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "hai le",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.2"
   }
 }
